tests/baselines/reference/recursiveBaseCheck4.errors.txt
==== tests/cases/compiler/recursiveBaseCheck4.ts (2 errors) ====
    class M<T> extends M<string> { }
          ~
!!! error TS2310: Type 'M<T>' recursively references itself as a base type.
    (new M).blah;
            ~~~~
!!! error TS2339: Property 'blah' does not exist on type 'M<{}>'.